--- a/custom.css
+++ b/custom.css
@@ -4,6 +4,11 @@ body {
   /* The html and body elements cannot have any padding or margin. */
 }
 
+body {
+  padding-top:40px;
+}
+
+
 /* Wrapper for page content to push down footer */
 #wrap {
   min-height: 100%;
@@ -23,4 +28,8 @@ body {
 
 .container .credit {
   margin: 20px 0;
+}
+
+.btn-toolbar {
+  margin-top: 8px;
 }
