--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -162,6 +162,7 @@ a:focus {
     -moz-background-size: cover;
     background-size: cover;
     -o-background-size: cover;
+    overflow-y: auto;
 }
 
 .intro .intro-body {
