--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -153,7 +153,7 @@ a:focus {
     display: table;
     width: 100%;
     height: auto;
-    min-height:100%;
+    min-height:600px;
     padding: 100px 0;
     text-align: center;
     color: #fff;
