--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -22,6 +22,13 @@
   z-index: 100;
 }
 
+.intro-text span{
+  /*text-decoration: underline;
+  text-decoration-style: dotted;*/
+  border-bottom: 1px dotted;
+
+}
+
  @font-face {
       font-family: "Colaborate-Thin";
       src: url("../fonts/Colaborate/ColabThi.otf");
