--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -4,6 +4,10 @@
  * For details, see http://www.apache.org/licenses/LICENSE-2.0.
  */
 
+
+.intro-svg{
+  min-height: 225px;
+}
 .main{
   padding-top:50px;
 }
@@ -132,7 +136,7 @@ a:focus {
 .navbar-custom {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
-    text-transform: uppercase;
+    text-transform: lowercase;
     font-family: "Colaborate-Bold","Helvetica Neue",Helvetica,Arial,sans-serif;
 
 
