--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -27,6 +27,18 @@
          padding-bottom: 0;
 
  }
+
+ .nav.nav-center {
+    display: inline-block;
+    left: 0;
+    right: 0;
+    margin:0;
+    float:none;
+}
+.navbar-nav>li {
+        float: none;
+}
+
  .navbar-nav {
     display: inline-block;
     float: none;
