--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -275,8 +275,10 @@ c
     vertical-align: middle;
 }
 
-.intro .intro-body .brand-heading {
-    font-size: 40px;
+.brand-heading {
+    font-size: 800%;
+    font-weight:400;
+    margin:10px 0px;
 }
 
 .intro .intro-body .intro-text {
@@ -289,9 +291,7 @@ c
         padding: 0;
     }
 
-    .intro .intro-body .brand-heading {
-        font-size: 100px;
-    }
+
 
     .intro .intro-body .intro-text {
         font-size: 26px;
